--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.2",
+    "@apollo/server": "^4.11.3",
+    "@nestjs/apollo": "^13.0.3",
+    "@nestjs/common": "^11.0.1",
+    "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.0.3",
+    "@nestjs/platform-express": "^11.0.1",
+    "@prisma/client": "^6.4.0",
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "graphql": "^16.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
+    "@nestjs/testing": "^11.0.1",
     "@nx/eslint": "20.4.4",
     "@nx/eslint-plugin": "20.4.4",
     "@nx/jest": "20.4.4",
@@ -28,6 +36,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
@@ -36,6 +45,7 @@
     "jest-environment-node": "^29.7.0",
     "nx": "20.4.4",
     "prettier": "^2.6.2",
+    "prisma": "^6.4.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
