--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "libs/*"
   ],
   "private": true,
+  "_moduleAliases": {
+    "@jobber/grpc": "dist/libs/grpc/main",
+    "@jobber/graphql": "dist/libs/graphql/main",
+    "@jobber/pulsar": "dist/libs/pulsar/main",
+    "@jobber/nestjs": "dist/libs/nestjs/main",
+    "@jobber/prisma": "dist/libs/prisma/main"
+  },
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "@golevelup/nestjs-discovery": "^4.0.3",
@@ -34,6 +41,7 @@
     "fibonacci": "^1.6.11",
     "graphql": "^16.10.0",
     "graphql-type-json": "^0.3.2",
+    "module-alias": "^2.2.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pulsar-client": "^1.12.0",
