--- a/libs/pulsar/package.json
+++ b/libs/pulsar/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@jobber/pulsar",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "pulsar-client": "^1.12.0"
+  },
   "devDependencies": {}
 }
