--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "module-alias": "^2.2.3",
+    "nestjs-pino": "^4.3.1",
+    "pino-http": "^10.4.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -57,6 +60,7 @@
     "jest-environment-node": "^29.7.0",
     "lint-staged": "^15.4.3",
     "nx": "20.4.4",
+    "pino-pretty": "^13.0.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
