--- a/apps/auth/.env.local
+++ b/apps/auth/.env.local
@@ -2,3 +2,4 @@ DATABASE_URL=postgres://postgres:admin@localhost:5432/jobber-auth?schema=public
 PORT=3000
 JWT_SECRET=48zeBK4dfDH2qjCI9Z1iTq8XkfKcBxLj
 JWT_EXPIRATION_MS=28800000
+AUTH_GRPC_SERVICE_URL=localhost:5000
