--- a/apps/products/.env.local
+++ b/apps/products/.env.local
@@ -1,3 +1,4 @@
 
 PORT=3003
 DATABASE_URL=postgres://postgres:admin@localhost:5432/jobber-products?schema=public
+PRODUCTS_GRPC_SERVICE_URL=localhost:5001
