--- a/charts/jobber/values.yaml
+++ b/charts/jobber/values.yaml
@@ -40,14 +40,13 @@ postgresql:
   auth:
     username: postgres
     password: postgres
-    database: jobber
-  # primary:
-  #   initdb:
-  #     scripts:
-  #       create-dbs.sql: |
-  #         CREATE DATABASE auth;
-  #         CREATE DATABASE products;
-  #         CREATE DATABASE jobs;
+  primary:
+    initdb:
+      scripts:
+        create-dbs.sql: |
+          CREATE DATABASE auth;
+          CREATE DATABASE products;
+          CREATE DATABASE jobs;
 
 jobs:
   enabled: true
@@ -71,3 +70,11 @@ auth:
   jwt:
    secret: 48zeBK4dfDH2qjCI9Z1iTq8XkfKcBxLj
    expirationMs: "28800000"
+
+products:
+  enabled: true
+  replicas: 1
+  image: '057116648205.dkr.ecr.eu-central-1.amazonaws.com/jobber/products:latest'
+  port:
+    http: 3003
+    grpc: 5001
