--- a/apps/jobs/Dockerfile
+++ b/apps/jobs/Dockerfile
@@ -2,6 +2,8 @@ FROM node:18-slim AS builder
 
 WORKDIR /workspace
 
+RUN apt-get update && apt-get install -y openssl
+
 COPY package*.json ./
 COPY nx.json ./
 COPY tsconfig*.json ./
@@ -15,6 +17,7 @@ COPY libs/graphql ./libs/graphql
 COPY libs/grpc ./libs/grpc
 COPY libs/nestjs ./libs/nestjs
 COPY libs/pulsar ./libs/pulsar
+COPY libs/prisma ./libs/prisma
 
 RUN npm install
 
@@ -24,6 +27,8 @@ RUN npx nx build jobs
 
 FROM node:18-slim AS runner
 
+RUN apt-get update && apt-get install -y openssl
+
 WORKDIR /app
 
 COPY --from=builder /workspace/package.json ./
@@ -31,12 +36,15 @@ COPY --from=builder /workspace/apps/jobs/package.json ./apps/jobs/package.json
 COPY --from=builder /workspace/libs/graphql/package.json ./libs/graphql/package.json
 COPY --from=builder /workspace/libs/grpc/package.json ./libs/grpc/package.json
 COPY --from=builder /workspace/libs/pulsar/package.json ./libs/pulsar/package.json
+COPY --from=builder /workspace/apps/jobs/prisma ./apps/jobs/prisma
+COPY --from=builder /workspace/libs/prisma/package.json ./libs/prisma/package.json
 COPY --from=builder /workspace/package-lock.json ./
 
 ENV NODE_ENV=production
 
 RUN npm ci
 
+COPY --from=builder /workspace/node_modules/@prisma-clients/jobs/ ./node_modules/@prisma-clients/jobs/
 COPY --from=builder /workspace/dist ./dist
 
 CMD ["node", "dist/apps/jobs/main"]
