--- a/apps/jobs/.env.local
+++ b/apps/jobs/.env.local
@@ -1,3 +1,5 @@
 PORT=3001
 PULSAR_SERVICE_URL=pulsar://localhost:6650
 AUTH_GRPC_SERVICE_URL=localhost:5000
+DATABASE_URL=postgres://postgres:admin@localhost:5432/jobber-jobs?schema=public
+JOBS_GRPC_SERVICE_URL=localhost:5002
