--- a/charts/jobber/templates/executor/deployment.yaml
+++ b/charts/jobber/templates/executor/deployment.yaml
@@ -25,6 +25,8 @@ spec:
             {{- include "common.env" . | nindent 12 }}
             - name: PORT
               value: "{{ .Values.executor.port }}"
+            - name: JOBS_GRPC_SERVICE_URL
+              value: "jobs:{{ .Values.jobs.port.grpc }}"
             - name: PRODUCTS_GRPC_SERVICE_URL
               value: "products:{{ .Values.products.port.grpc }}"
 {{- end }}
