--- a/charts/jobber/values.yaml
+++ b/charts/jobber/values.yaml
@@ -52,7 +52,9 @@ jobs:
   enabled: true
   replicas: 1
   image: '057116648205.dkr.ecr.eu-central-1.amazonaws.com/jobber/jobs:latest'
-  port: 3001
+  port:
+    http: 3001
+    grpc: 5002
 
 executor:
   enabled: true
