--- a/charts/jobber/templates/ingress.yaml
+++ b/charts/jobber/templates/ingress.yaml
@@ -2,22 +2,25 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
+  ingressClassName: nginx
   rules:
     - host: jobber.local
       http:
         paths:
-          - path: /jobs
-            pathType: Prefix
-            backend:
-              service:
-                name: jobs-http
-                port:
-                  number: {{ .Values.jobs.port.http }}
-          - path: /auth
-            pathType: Prefix
+          - path: /auth(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: auth-http
                 port:
                   number: {{ .Values.auth.port.http }}
+          - path: /jobs(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: jobs-http
+                port:
+                  number: {{ .Values.jobs.port.http }}
