--- a/charts/jobber/templates/ingress.yaml
+++ b/charts/jobber/templates/ingress.yaml
@@ -2,25 +2,33 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress
+  {{- if .Values.ingress.alb }}
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    alb.ingress.kubernetes.io/scheme: "internet-facing"
+    alb.ingress.kubernetes.io/target-type: "ip"
+    alb.ingress.kubernetes.io/listen-ports: '[{ "HTTP": 80 }]'
+  {{- end }}
 spec:
-  ingressClassName: nginx
+  {{- if .Values.ingress.alb }}
+  ingressClassName: alb
+  {{- end }}
   rules:
-    - host: jobber.local
+    - {{- if not .Values.ingress.alb }}
+      host: jobber.local
+      {{- end }}
       http:
         paths:
-          - path: /auth(/|$)(.*)
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: auth-http
-                port:
-                  number: {{ .Values.auth.port.http }}
-          - path: /jobs(/|$)(.*)
-            pathType: ImplementationSpecific
+          - path: /jobs
+            pathType: Prefix
             backend:
               service:
                 name: jobs-http
                 port:
                   number: {{ .Values.jobs.port.http }}
+          - path: /auth
+            pathType: Prefix
+            backend:
+              service:
+                name: auth-http
+                port:
+                  number: {{ .Values.auth.port.http }}
