--- a/apps/auth/.env.local
+++ b/apps/auth/.env.local
@@ -3,3 +3,4 @@ PORT=3000
 JWT_SECRET=48zeBK4dfDH2qjCI9Z1iTq8XkfKcBxLj
 JWT_EXPIRATION_MS=28800000
 AUTH_GRPC_SERVICE_URL=localhost:5000
+SECURE_COOKIE=false
