--- a/apps/executor/project.json
+++ b/apps/executor/project.json
@@ -22,6 +22,7 @@
       "defaultConfiguration": "development",
       "dependsOn": ["build"],
       "options": {
+        "port": "9230",
         "buildTarget": "executor:build",
         "runBuildTargetDependencies": false
       },
