--- a/apps/jobs/project.json
+++ b/apps/jobs/project.json
@@ -23,6 +23,7 @@
       "defaultConfiguration": "development",
       "dependsOn": ["build"],
       "options": {
+        "port": "9231",
         "buildTarget": "jobs:build",
         "runBuildTargetDependencies": false
       },
